sumo/tests/duarouter/errors/false_output/options.duarouter
--net-file=input_net.net.xml --trip-files=input_trips.trips.xml -o output/routes.rou.xml
